# organizefs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
arena/: Cargo.toml
arena/src/: arena_new.rs  arena_old.rs  arena_types.rs  lib.rs
common/: Cargo.toml
common/src/: file.rs  lib.rs  normalize.rs
file_proc_macro/: Cargo.toml
file_proc_macro/src/: lib.rs
file_proc_tests/: Cargo.toml
file_proc_tests/src/: main.rs
organizefs/: Cargo.toml
organizefs/src/: common.rs  lib.rs  libc_wrapper.rs  main.rs  organizefs.rs  server.rs
organizefs/src/arena/: arena_new.rs  arena_old.rs  mod.rs
organizefs/src/common/: file.rs  mock_traits.rs  mod.rs
scratch/: Cargo.toml
scratch/src/: main.rs
src/: lib.rs  libc_wrapper.rs  main.rs
store/: Cargo.toml
store/src/: lib.rs
