[workspace]
resolver = "2"
members = [
    "file_proc_macro",
    "file_proc_tests",
    "common",
    "organizefs",
    "xtask",
    "arena",
    "store"
]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"
# A powerful mock object library for Rust.
mockall = "0.11"
lazy_static = "1.4"
walkdir = "2.3"
