[package]
name = "arena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-test = { workspace = true }
indextree-ng = { version = "1.0.5" }

[dependencies.common]
path="../common"
