[package]
name = "organizefs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
fuse_mt = "0.6.0"
humansize = {version = "2.1.3", features = ["impl_style"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
libc = "0.2.140"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tracing = {workspace = true }
tracing-subscriber = { workspace = true }
walkdir = "2.3.3"
# Determines the MIME type of a file by traversing a filetype tree.
tree_magic_mini = "3.0.3"

[dependencies.common]
path="../common"

[dependencies.arena]
path="../arena"