[package]
name = "organizefs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
fuse_mt = "0.6"
itertools = "0.11"
libc = "0.2"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tracing = {workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
mockall = { workspace = true }
hyper = "0.14.25"
walkdir = { workspace = true }
indextree-ng = { version = "1.0" }
parking_lot = "0.12.1"

[dependencies.common]
path="../common"

[dependencies.arena]
path="../arena"

[dependencies.file_proc_macro]
path="../file_proc_macro"

[dependencies.store]
path="../store"
